--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,7 @@
   margin: 0px;
   padding: 0px;
   background-color: #000000;
+    overflow: auto;
 }
 #content {
   width: 60vw;
@@ -38,12 +39,17 @@
   position: fixed;
   top: 0;
   right: 0;
-  width: 15px;
+  width: 1.7vw;
   height: 100%;
   background: linear-gradient(to top, #00B712, #5AFF15, #88DA61);
   animation: scroll 1s linear;
   animation-iteration-count: infinite;
 }
+@media only screen and (min-width: 1100px){
+    #progressBar{
+        width:1.1vw;
+    }
+  }
 @keyframes scroll {
   0% {
     filter: hue-rotate(0deg);
