--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,7 +4,7 @@
   margin: 0px;
   padding: 0px;
   background-color: #000000;
-    overflow: auto;
+    
 }
 #content {
   width: 60vw;
@@ -12,6 +12,7 @@
   color: white;
   font-size: 2.2em;
   font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", "serif";
+    overflow: auto;
 }
 @media only screen and (max-width: 1050px) and (min-width:550px) {
   #content {
@@ -31,7 +32,7 @@
   position: fixed;
   top: 0;
   right: 0;
-  width: 15px;
+  width: 1.7vw;
   height: 100%;
   background: rgba(255, 255, 255, 0.0);
 }
@@ -69,7 +70,7 @@
   width: 100%;
   height: 100%;
   background: linear-gradient(to top, #00B712, #5AFF15, #88DA61);
-  filter: blur(10px);
+  filter: blur(20px);
 }
 #progressBar:after {
   content: '';
@@ -79,5 +80,5 @@
   width: 100%;
   height: 100%;
   background: linear-gradient(to top, #00B712, #5AFF15, #88DA61);
-  filter: blur(30px);
+  filter: blur(50px);
 }
